--- a/HealthySettle/HealthySettle/HomeGroup/ExactSearchGroup/SearchVController.xib
+++ b/HealthySettle/HealthySettle/HomeGroup/ExactSearchGroup/SearchVController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
@@ -263,7 +263,10 @@
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="LLQ-jF-zSV"/>
                     </constraints>
-                    <state key="normal" title="查询"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                    <state key="normal" title="查询">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Rl-dL-oeu">
                     <rect key="frame" x="0.0" y="202" width="375" height="50"/>
@@ -341,10 +344,12 @@
                         <constraint firstAttribute="height" constant="40" id="Vlg-Tv-T8Z"/>
                         <constraint firstAttribute="width" constant="30" id="b8v-0Z-GMv"/>
                     </constraints>
-                    <state key="normal" title="bak"/>
+                    <state key="normal" title="bak">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
                 </button>
             </subviews>
-            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="0.95294117647058818" green="0.95294117647058818" blue="0.95294117647058818" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="d1n-8H-bAR" firstAttribute="top" secondItem="EKD-sd-Mgv" secondAttribute="bottom" constant="50" id="2MF-fk-5K2"/>
                 <constraint firstItem="XKC-8s-Fzt" firstAttribute="leading" secondItem="5GU-GY-ISa" secondAttribute="trailing" constant="-50" id="49h-3b-3XO"/>
