--- a/HealthySettle/HealthySettle/HomeGroup/ExactSearchGroup/SearchVController.xib
+++ b/HealthySettle/HealthySettle/HomeGroup/ExactSearchGroup/SearchVController.xib
@@ -339,12 +339,12 @@
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5GU-GY-ISa">
                     <rect key="frame" x="20" y="20" width="30" height="40"/>
-                    <color key="backgroundColor" red="1" green="0.2431656891" blue="0.39739182740000001" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="Vlg-Tv-T8Z"/>
                         <constraint firstAttribute="width" constant="30" id="b8v-0Z-GMv"/>
                     </constraints>
-                    <state key="normal" title="bak">
+                    <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                    <state key="normal" title="&lt;">
                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                 </button>
