--- a/HealthySettle/HealthySettle/HomeGroup/ExactSearchGroup/ResultCellGroup/LivingTimeTVCell.xib
+++ b/HealthySettle/HealthySettle/HomeGroup/ExactSearchGroup/ResultCellGroup/LivingTimeTVCell.xib
@@ -31,25 +31,16 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2016-04-23" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O1n-sd-ZJz">
-                        <rect key="frame" x="93" y="8" width="100" height="57"/>
+                        <rect key="frame" x="83" y="8" width="80" height="57"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="100" id="8Rk-lV-Bz7"/>
+                            <constraint firstAttribute="width" constant="80" id="8Rk-lV-Bz7"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
                         <color key="textColor" red="0.76862745098039209" green="0.76862745098039209" blue="0.76862745098039209" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2016-04－25" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nIc-bQ-IoL">
-                        <rect key="frame" x="253" y="8" width="100" height="57"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="100" id="Q2J-24-OR4"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                        <color key="textColor" red="0.76862745098039209" green="0.76862745098039209" blue="0.76862745098039209" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="离店" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="igv-gJ-Mvi">
-                        <rect key="frame" x="203" y="8" width="30" height="57"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="离店" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="igv-gJ-Mvi">
+                        <rect key="frame" x="175" y="8" width="30" height="57"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="30" id="HGm-sL-IZG"/>
                         </constraints>
@@ -57,14 +48,23 @@
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d1x-Jy-wga">
-                        <rect key="frame" x="564" y="22" width="36" height="30"/>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d1x-Jy-wga">
+                        <rect key="frame" x="580" y="8" width="30" height="57"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="30" id="nbk-XO-Tdz"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
                         <state key="normal" title="修改"/>
                     </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2016-04－25" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nIc-bQ-IoL">
+                        <rect key="frame" x="213" y="8" width="80" height="57"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="80" id="Q2J-24-OR4"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                        <color key="textColor" red="0.76862745098039209" green="0.76862745098039209" blue="0.76862745098039209" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="bottomMargin" secondItem="nIc-bQ-IoL" secondAttribute="bottom" id="1kP-6j-OIo"/>
@@ -72,10 +72,10 @@
                     <constraint firstItem="2cx-xZ-6pj" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="A6b-8h-TNk"/>
                     <constraint firstAttribute="bottomMargin" secondItem="2cx-xZ-6pj" secondAttribute="bottom" id="Acc-vR-1Ta"/>
                     <constraint firstAttribute="bottomMargin" secondItem="kNP-H0-5d2" secondAttribute="bottom" id="Dqs-dV-G0y"/>
-                    <constraint firstItem="O1n-sd-ZJz" firstAttribute="leading" secondItem="2cx-xZ-6pj" secondAttribute="trailing" constant="20" id="KJg-IE-oan"/>
+                    <constraint firstItem="O1n-sd-ZJz" firstAttribute="leading" secondItem="2cx-xZ-6pj" secondAttribute="trailing" constant="10" id="KJg-IE-oan"/>
                     <constraint firstAttribute="bottomMargin" secondItem="O1n-sd-ZJz" secondAttribute="bottom" id="KcF-XC-lF9"/>
                     <constraint firstAttribute="trailingMargin" secondItem="nIc-bQ-IoL" secondAttribute="trailing" constant="10" id="LnP-nq-zNc"/>
-                    <constraint firstItem="nIc-bQ-IoL" firstAttribute="leading" secondItem="igv-gJ-Mvi" secondAttribute="trailing" constant="20" id="OsE-lI-jTj"/>
+                    <constraint firstItem="nIc-bQ-IoL" firstAttribute="leading" secondItem="igv-gJ-Mvi" secondAttribute="trailing" constant="10" id="OsE-lI-jTj"/>
                     <constraint firstAttribute="bottomMargin" secondItem="igv-gJ-Mvi" secondAttribute="bottom" id="dg5-pC-oAm"/>
                     <constraint firstAttribute="trailingMargin" secondItem="d1x-Jy-wga" secondAttribute="trailing" id="iT5-5j-3g7"/>
                     <constraint firstAttribute="bottomMargin" secondItem="d1x-Jy-wga" secondAttribute="bottom" id="mBt-bw-UoN"/>
