--- a/HealthySettle/HealthySettle/MyGroup/PersonalGroupn/PasswordCVController.xib
+++ b/HealthySettle/HealthySettle/MyGroup/PersonalGroupn/PasswordCVController.xib
@@ -131,7 +131,7 @@
                     </state>
                 </button>
             </subviews>
-            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="fem-kw-cFu" secondAttribute="trailing" id="0CY-6Y-Jq7"/>
                 <constraint firstItem="fem-kw-cFu" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="14" id="4o8-2e-2KT"/>
