--- a/HealthySettle/HealthySettle/HomeGroup/ExactSearchGroup/ResultCellGroup/HomeTVCell.xib
+++ b/HealthySettle/HealthySettle/HomeGroup/ExactSearchGroup/ResultCellGroup/HomeTVCell.xib
@@ -101,6 +101,7 @@
                         </state>
                     </button>
                 </subviews>
+                <color key="backgroundColor" red="0.97647058819999999" green="0.97647058819999999" blue="0.97647058819999999" alpha="1" colorSpace="calibratedRGB"/>
                 <constraints>
                     <constraint firstItem="ZDE-LT-1u2" firstAttribute="height" secondItem="fwu-Zd-5qu" secondAttribute="height" id="09c-UB-RPf"/>
                     <constraint firstItem="ZMm-nX-r6z" firstAttribute="top" secondItem="T7C-Ys-ge4" secondAttribute="bottom" id="1Ou-2k-Xmq"/>
