--- a/HealthySettle/HealthySettle/HomeGroup/ExactSearchGroup/ResultCellGroup/ManageTimeTVCell.xib
+++ b/HealthySettle/HealthySettle/HomeGroup/ExactSearchGroup/ResultCellGroup/ManageTimeTVCell.xib
@@ -29,7 +29,7 @@
                         <constraints>
                             <constraint firstAttribute="width" constant="80" id="VIt-eg-MQD"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
                         <color key="textColor" red="0.76862745098039209" green="0.76862745098039209" blue="0.76862745098039209" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -47,11 +47,12 @@
                         <constraints>
                             <constraint firstAttribute="width" constant="80" id="8tK-BQ-SeH"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
                         <color key="textColor" red="0.76862745098039209" green="0.76862745098039209" blue="0.76862745098039209" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
+                <color key="backgroundColor" red="0.97647058823529409" green="0.97647058823529409" blue="0.97647058823529409" alpha="1" colorSpace="calibratedRGB"/>
                 <constraints>
                     <constraint firstAttribute="bottomMargin" secondItem="RVc-3d-NKN" secondAttribute="bottom" id="5Ne-og-E6D"/>
                     <constraint firstItem="RVc-3d-NKN" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="8I9-6N-lRQ"/>
