完成主线UI界面的全部调整

--- a/HealthySettle/HealthySettle/HomeGroup/ExactSearchGroup/ResultCellGroup/OrgIntroTVCell.xib
+++ b/HealthySettle/HealthySettle/HomeGroup/ExactSearchGroup/ResultCellGroup/OrgIntroTVCell.xib
@@ -127,12 +127,12 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5pV-jJ-g4P">
-                        <rect key="frame" x="583" y="147" width="30" height="25"/>
+                        <rect key="frame" x="588" y="152" width="25" height="20"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="46" id="a52-mO-YXx"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="9"/>
-                        <state key="normal" title="更多"/>
+                        <state key="normal" backgroundImage="next_01.png"/>
                         <variation key="default">
                             <mask key="constraints">
                                 <exclude reference="a52-mO-YXx"/>
@@ -161,18 +161,18 @@
                     <constraint firstItem="Idz-lN-tf4" firstAttribute="top" secondItem="Ihy-nu-PL5" secondAttribute="top" id="O8y-KT-A6k"/>
                     <constraint firstItem="BBX-X9-bdI" firstAttribute="leading" secondItem="XFa-Tk-OjN" secondAttribute="trailing" constant="5" id="OZB-fF-rdw"/>
                     <constraint firstItem="uZB-Ge-E5B" firstAttribute="top" secondItem="qrF-GU-mZg" secondAttribute="bottom" constant="1" id="Szi-NV-8lO"/>
-                    <constraint firstItem="5pV-jJ-g4P" firstAttribute="top" secondItem="Idz-lN-tf4" secondAttribute="top" id="V6M-WD-1SS"/>
+                    <constraint firstItem="5pV-jJ-g4P" firstAttribute="top" secondItem="Idz-lN-tf4" secondAttribute="top" constant="5" id="V6M-WD-1SS"/>
                     <constraint firstAttribute="trailingMargin" secondItem="64U-wd-YOq" secondAttribute="trailing" id="VwX-7L-Ukb"/>
                     <constraint firstItem="64U-wd-YOq" firstAttribute="height" secondItem="2EL-Mb-PNB" secondAttribute="height" id="WNb-Z2-CrB"/>
                     <constraint firstItem="uZB-Ge-E5B" firstAttribute="height" secondItem="qrF-GU-mZg" secondAttribute="height" id="WZG-fE-njG"/>
                     <constraint firstItem="Ihy-nu-PL5" firstAttribute="top" secondItem="XFa-Tk-OjN" secondAttribute="bottom" constant="1" id="Whm-4n-7Zs"/>
-                    <constraint firstItem="5pV-jJ-g4P" firstAttribute="height" secondItem="Idz-lN-tf4" secondAttribute="height" id="Wwp-Yq-WPy"/>
+                    <constraint firstItem="5pV-jJ-g4P" firstAttribute="height" secondItem="Idz-lN-tf4" secondAttribute="height" constant="-5" id="Wwp-Yq-WPy"/>
                     <constraint firstItem="2EL-Mb-PNB" firstAttribute="width" secondItem="qrF-GU-mZg" secondAttribute="width" id="XKo-DW-ScK"/>
                     <constraint firstItem="uZB-Ge-E5B" firstAttribute="leading" secondItem="qrF-GU-mZg" secondAttribute="leading" id="bSR-Hk-69J"/>
                     <constraint firstItem="2EL-Mb-PNB" firstAttribute="leading" secondItem="qrF-GU-mZg" secondAttribute="leading" id="cnI-zM-nUz"/>
                     <constraint firstItem="N5e-6a-9XZ" firstAttribute="top" secondItem="qrF-GU-mZg" secondAttribute="top" id="dbs-oe-cCt"/>
                     <constraint firstItem="64U-wd-YOq" firstAttribute="top" secondItem="2EL-Mb-PNB" secondAttribute="top" id="eI9-EQ-aA7"/>
-                    <constraint firstItem="5pV-jJ-g4P" firstAttribute="leading" secondItem="Idz-lN-tf4" secondAttribute="trailing" id="eoM-9g-bIu"/>
+                    <constraint firstItem="5pV-jJ-g4P" firstAttribute="leading" secondItem="Idz-lN-tf4" secondAttribute="trailing" constant="5" id="eoM-9g-bIu"/>
                     <constraint firstItem="qrF-GU-mZg" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="4" id="hEs-MA-Ggh"/>
                     <constraint firstItem="J6h-Sf-J3c" firstAttribute="leading" secondItem="Zs5-9d-gxg" secondAttribute="trailing" constant="5" id="hnV-zM-obP"/>
                     <constraint firstItem="oRO-Fw-S1z" firstAttribute="leading" secondItem="uZB-Ge-E5B" secondAttribute="trailing" constant="5" id="jNl-Jb-R6z"/>
@@ -201,4 +201,7 @@
             <point key="canvasLocation" x="449.5" y="275"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="next_01.png" width="58" height="71"/>
+    </resources>
 </document>
