--- a/HealthySettle/HealthySettle/HomeGroup/ExactSearchGroup/PensionSRTVCell.xib
+++ b/HealthySettle/HealthySettle/HomeGroup/ExactSearchGroup/PensionSRTVCell.xib
@@ -30,15 +30,6 @@
                             </mask>
                         </variation>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dgv-NV-VNK">
-                        <rect key="frame" x="334" y="38" width="60" height="53"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="60" id="IS7-g6-U7b"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <color key="textColor" red="0.89803921568627454" green="0.25098039215686274" blue="0.14509803921568626" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bhv-uA-hch">
                         <rect key="frame" x="106" y="63" width="180" height="20"/>
                         <constraints>
@@ -47,15 +38,6 @@
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="10"/>
                         <color key="textColor" red="0.84705882352941175" green="0.84705882352941175" blue="0.84705882352941175" alpha="1" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="起" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Yy-kd-96t">
-                        <rect key="frame" x="397" y="48" width="20" height="33"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="20" id="3yj-eq-UyV"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                        <color key="textColor" red="0.77254901960784317" green="0.77254901960784317" blue="0.77254901960784317" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="V4a-sH-wOz">
@@ -74,31 +56,43 @@
                         <color key="textColor" red="0.84705882352941175" green="0.84705882352941175" blue="0.84705882352941175" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dgv-NV-VNK">
+                        <rect key="frame" x="346" y="38" width="50" height="53"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="50" id="IS7-g6-U7b"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <color key="textColor" red="0.89803921568627454" green="0.25098039215686274" blue="0.14509803921568626" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="起" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aoO-Rn-UJJ">
+                        <rect key="frame" x="397" y="38" width="20" height="53"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="20" id="f2N-9l-Z1l"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                        <color key="textColor" red="0.7725490196" green="0.7725490196" blue="0.7725490196" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="Dgv-NV-VNK" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="30" id="2Bc-RG-VdS"/>
                     <constraint firstItem="JbI-4x-C1l" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="98" id="2kB-Cs-8Ie"/>
                     <constraint firstItem="Bhv-uA-hch" firstAttribute="leading" secondItem="JbI-4x-C1l" secondAttribute="leading" id="922-Fl-RCa"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="5Yy-kd-96t" secondAttribute="trailing" id="959-80-uzw"/>
+                    <constraint firstItem="aoO-Rn-UJJ" firstAttribute="leading" secondItem="Dgv-NV-VNK" secondAttribute="trailing" constant="1" id="AgO-nP-ffD"/>
                     <constraint firstItem="V4a-sH-wOz" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="FQb-gf-Zog"/>
                     <constraint firstItem="Bhv-uA-hch" firstAttribute="top" secondItem="9ap-gO-BzL" secondAttribute="bottom" id="GBC-Q6-ahS"/>
                     <constraint firstAttribute="bottomMargin" secondItem="Dgv-NV-VNK" secondAttribute="bottom" constant="30" id="HIG-AW-E4r"/>
                     <constraint firstItem="9ap-gO-BzL" firstAttribute="leading" secondItem="JbI-4x-C1l" secondAttribute="leading" id="MAd-uU-TSk"/>
                     <constraint firstItem="V4a-sH-wOz" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="5" id="MwH-Of-4dI"/>
                     <constraint firstItem="9ap-gO-BzL" firstAttribute="top" secondItem="JbI-4x-C1l" secondAttribute="bottom" id="Nro-sy-EA6"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="aoO-Rn-UJJ" secondAttribute="trailing" id="Qez-z4-f2T"/>
                     <constraint firstItem="JbI-4x-C1l" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="5" id="Rz6-Fb-4tj"/>
                     <constraint firstAttribute="trailingMargin" secondItem="JbI-4x-C1l" secondAttribute="trailing" constant="30" id="SrS-U9-smY"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="5Yy-kd-96t" secondAttribute="bottom" constant="40" id="VxJ-xt-eyX"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="5Yy-kd-96t" secondAttribute="trailing" id="nkT-NQ-ZEQ"/>
-                    <constraint firstItem="5Yy-kd-96t" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="40" id="op4-vY-Gem"/>
-                    <constraint firstItem="5Yy-kd-96t" firstAttribute="leading" secondItem="Dgv-NV-VNK" secondAttribute="trailing" constant="3" id="yUV-r9-eek"/>
+                    <constraint firstItem="aoO-Rn-UJJ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="30" id="VAv-a2-jDU"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="aoO-Rn-UJJ" secondAttribute="bottom" constant="30" id="z4n-Up-Ayz"/>
                     <constraint firstAttribute="bottomMargin" secondItem="V4a-sH-wOz" secondAttribute="bottom" id="zKv-J2-MNB"/>
                 </constraints>
-                <variation key="default">
-                    <mask key="constraints">
-                        <exclude reference="nkT-NQ-ZEQ"/>
-                    </mask>
-                </variation>
             </tableViewCellContentView>
             <connections>
                 <outlet property="available_bunk" destination="Bhv-uA-hch" id="dPp-H7-bgE"/>
