--- a/HealthySettle/HealthySettle/HomeGroup/ExactSearchGroup/RegimenRTVCell.xib
+++ b/HealthySettle/HealthySettle/HomeGroup/ExactSearchGroup/RegimenRTVCell.xib
@@ -15,23 +15,8 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="127"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vgi-pc-lMb">
-                        <rect key="frame" x="100" y="13" width="182" height="30"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="30" id="HtM-6u-R5u"/>
-                            <constraint firstAttribute="width" constant="150" id="IJ4-W8-2AO"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                        <nil key="highlightedColor"/>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="IJ4-W8-2AO"/>
-                            </mask>
-                        </variation>
-                    </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="x4h-Bf-lal">
-                        <rect key="frame" x="227" y="43" width="50" height="25"/>
+                        <rect key="frame" x="232" y="39" width="50" height="25"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="50" id="ApO-Il-CMv"/>
                         </constraints>
@@ -40,7 +25,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="起" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AJc-0Q-awe">
-                        <rect key="frame" x="282" y="43" width="20" height="25"/>
+                        <rect key="frame" x="287" y="39" width="20" height="25"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="20" id="FkM-7f-Fce"/>
                             <constraint firstAttribute="height" constant="25" id="vHT-B9-vg1"/>
@@ -56,10 +41,10 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wNm-tJ-BgS">
-                        <rect key="frame" x="100" y="89" width="182" height="25"/>
+                        <rect key="frame" x="100" y="99" width="182" height="15"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="101" id="9hc-th-99L"/>
-                            <constraint firstAttribute="height" constant="25" id="FCq-Iu-JWs"/>
+                            <constraint firstAttribute="height" constant="15" id="FCq-Iu-JWs"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="10"/>
                         <color key="textColor" red="0.76470588235294112" green="0.76470588235294112" blue="0.76470588235294112" alpha="1" colorSpace="calibratedRGB"/>
@@ -70,18 +55,33 @@
                             </mask>
                         </variation>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vgi-pc-lMb">
+                        <rect key="frame" x="100" y="13" width="182" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="HtM-6u-R5u"/>
+                            <constraint firstAttribute="width" constant="150" id="IJ4-W8-2AO"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="IJ4-W8-2AO"/>
+                            </mask>
+                        </variation>
+                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailingMargin" secondItem="Vgi-pc-lMb" secondAttribute="trailing" constant="30" id="E2e-aS-ShE"/>
                     <constraint firstItem="Vgi-pc-lMb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="92" id="G5N-fG-tu4"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="AJc-0Q-awe" secondAttribute="trailing" constant="10" id="I3c-wS-EaE"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="AJc-0Q-awe" secondAttribute="trailing" constant="5" id="I3c-wS-EaE"/>
                     <constraint firstAttribute="trailingMargin" secondItem="wNm-tJ-BgS" secondAttribute="trailing" constant="30" id="KWQ-Rz-Yar"/>
                     <constraint firstItem="wNm-tJ-BgS" firstAttribute="leading" secondItem="Vgi-pc-lMb" secondAttribute="leading" id="Oev-mY-BLA"/>
                     <constraint firstItem="AJc-0Q-awe" firstAttribute="top" secondItem="x4h-Bf-lal" secondAttribute="top" id="Slq-rY-SOe"/>
                     <constraint firstItem="AJc-0Q-awe" firstAttribute="height" secondItem="x4h-Bf-lal" secondAttribute="height" id="VVH-RA-mNR"/>
                     <constraint firstItem="Fh4-Z0-71E" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="5" id="aTe-42-KrQ"/>
                     <constraint firstAttribute="leadingMargin" secondItem="Fh4-Z0-71E" secondAttribute="leading" constant="-5" id="eRt-id-zb2"/>
-                    <constraint firstItem="AJc-0Q-awe" firstAttribute="top" secondItem="Vgi-pc-lMb" secondAttribute="bottom" id="jOf-Z3-z7n"/>
+                    <constraint firstItem="AJc-0Q-awe" firstAttribute="top" secondItem="Vgi-pc-lMb" secondAttribute="bottom" constant="-4" id="jOf-Z3-z7n"/>
                     <constraint firstItem="Vgi-pc-lMb" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="5" id="ojd-9T-NRx"/>
                     <constraint firstItem="wNm-tJ-BgS" firstAttribute="bottom" secondItem="Fh4-Z0-71E" secondAttribute="bottom" id="tEv-Dg-rik"/>
                     <constraint firstAttribute="bottomMargin" secondItem="Fh4-Z0-71E" secondAttribute="bottom" constant="5" id="ymU-oD-Mun"/>
